--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,3 +24,23 @@ $fa-font-path: '//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts';
 .button {
   background: $primary;
 }
+
+.is-relative {
+  position: relative;
+}
+
+.fade-enter-active,
+.fade-leave-active,
+.fade-enter,
+.fade-leave-active {
+  position: absolute;
+  width: 100%;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 600ms;
+}
+
+.fade-enter, .fade-leave-active {
+  opacity: 0;
+}
